els get hidden/overflow fix

--- a/src/styles/modules/_password-generator.sass
+++ b/src/styles/modules/_password-generator.sass
@@ -14,5 +14,6 @@
         border: 2px dashed $c-secondary
         border-radius: 3px
         text-align: center
+        max-width: 100%
     &--range
         width: 100%
