--- a/src/styles/modules/_react-app.sass
+++ b/src/styles/modules/_react-app.sass
@@ -1,7 +1,6 @@
 .react-app
     padding: 2rem
-    height: 100%
+    min-height: 100%
     display: flex
-    align-items: center
     justify-content: space-between
     flex-direction: column
